--- a/api/package.json
+++ b/api/package.json
@@ -2,9 +2,10 @@
   "name": "api",
   "version": "1.0.0",
   "description": "Backend for amazon clone",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "siwachs",
