--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
+    "axios": "^1.6.7",
     "expo": "~50.0.8",
     "expo-status-bar": "~1.11.1",
     "prop-types": "^15.8.1",
@@ -26,7 +27,8 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.57.0",
     "eslint-config-universe": "^12.0.0",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "react-native-dotenv": "^3.4.11"
   },
   "private": true
 }
