--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
-    "axios": "^1.6.7",
     "expo": "~50.0.8",
+    "expo-build-properties": "~0.11.1",
     "expo-status-bar": "~1.11.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
