--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-image-slider-box": "^2.0.7",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0"
   },
