--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
-    "expo": "~50.0.8",
+    "expo": "~50.0.11",
     "expo-build-properties": "~0.11.1",
     "expo-status-bar": "~1.11.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-image-slider-box": "^2.0.7",
-    "react-native-safe-area-context": "^4.8.2",
+    "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "^3.29.0"
   },
   "devDependencies": {
