Publish app using eas update

--- a/app.json
+++ b/app.json
@@ -26,6 +26,17 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "f767612d-bc98-425d-ad45-bbf36a6c2553"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/f767612d-bc98-425d-ad45-bbf36a6c2553"
     }
   }
 }
