--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "expo": "~50.0.11",
     "expo-build-properties": "~0.11.1",
     "expo-status-bar": "~1.11.1",
-    "lottie-react-native": "^6.7.0",
+    "expo-updates": "~0.24.12",
+    "lottie-react-native": "^6.5.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "0.73.5",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-modals": "^0.22.3",
